# xiaowang-desktop-pet

./: .gitignore  README.md  pyproject.toml
assets/: README.md
config/: defaults.json
docs/: action_asset_spec.md  state_diagram.md
src/xiaowang_pet/: __init__.py  animations.py  assets.py  config.py  emotes.py  main.py  state_machine.py  states.py  window.py
tests/: test_state_machine.py
